<resources>
    <string name="app_name">AND</string>

    <string name="title_activity_topology">Topology</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="and">AND</string>
    <string name="register">REGISTER</string>
    <string name="e_mail">E-mail</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="signup">Signup</string>
    <string name="login">Login</string>
    <string name="don_t_have_an_account_sign_up">Don\'t have an account? Sign up</string>

</resources>
