<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:fitsSystemWindows="true"
    android:background="@drawable/background_gradient"
    tools:context="cse.opa.and.Activity.LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:layout_weight="1">
        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            app:srcCompat="@drawable/ic_logo2"
            android:layout_gravity="center_horizontal"
            android:id="@+id/imageView2"/>

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:gravity="center"
            android:text="@string/and"
            android:textColor="#fff"
            android:textSize="26dp"
            android:fontFamily="sans-serif-light" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:layout_weight="1">
        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1.5"
            android:layout_gravity="bottom" />
        <EditText
            android:id="@+id/et_login_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:hint="@string/e_mail"
            android:textColorHint="#9E9E9E"
            android:textColor="@android:color/white"
            android:fontFamily="sans-serif-light"
            android:background="@drawable/et_background"
            android:drawableLeft="@drawable/ic_email"
            android:drawablePadding="3pt"
            android:maxLength="35"
            android:paddingVertical="2dp"
            android:paddingStart="2dp"
            android:paddingEnd="5dp"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.2"
            android:layout_gravity="bottom" />
        <EditText
            android:id="@+id/et_login_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:hint="@string/password"
            android:background="@drawable/et_background"
            android:textColorHint="#9E9E9E"
            android:textColor="@android:color/white"
            android:fontFamily="sans-serif-light"
            android:drawableLeft="@drawable/ic_password"
            android:drawablePadding="3pt"
            android:paddingVertical="2dp"
            android:paddingStart="2dp"
            android:paddingEnd="5dp"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.5"
            android:layout_gravity="bottom" />

        <Button
            android:id="@+id/btn_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/mailText"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:background="@drawable/btn_background"
            android:elevation="2dp"
            android:fontFamily="sans-serif-light"
            android:paddingLeft="30pt"
            android:paddingRight="30pt"
            android:text="@string/login"
            android:textColor="#000"
            android:textSize="18sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.5"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_gravity="bottom" />
        <TextView
            android:id="@+id/tv_signup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.1"
            android:textColor="#fff"
            android:gravity="center_horizontal"
            android:fontFamily="sans-serif-light"
            android:text="@string/don_t_have_an_account_sign_up" />
    </LinearLayout>

</LinearLayout>
